IaC-quiz/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iac-quiz
  labels:
    app: iac-quiz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iac-quiz
  template:
    metadata:
      labels:
        app: iac-quiz
    spec:
      containers:
      - name: iac-quiz
        image: yourdockerhub/iac-quiz:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
