IaC-quiz/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iac-quiz
  labels:
    app: iac-quiz
spec:
  selector:
    app: iac-quiz
  ports:
  - name: http
    port: 8080
    targetPort: 8080
